<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeHealthMonitoring</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_upload">UPLOAD</string>
    <string name="title_activity_upload_data">Upload Data</string>
	<string name="login">Login</string>
	<string name="pass">Password</string>
	<string name="username">Username</string>
	<string name="HeartRate">HeartRate</string>
	<string name="BloodPressure">BloodPressure</string>
	<string name="Electrocardiography">Electrocardiography</string>
</resources>
